# pet_PDE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  finite-elements-template.cpp  mesh.vtk  read-mesh-template.cpp  read-mesh.cpp  square.geo
assets/: square.msh
bench/: CMakeLists.txt  PDE-bench.cpp  PDE-dense-bench.cpp  PDE-sparse-csr-bench.cpp  PDE-sparse-eigen-bench.cpp  PDE-sparse-man-bench.cpp  common.cpp  common.h  dense.h  sparse-man.cpp  sparse-man.h
data/: mesh_t_0.000000.vtk  mesh_t_0.010000.vtk  mesh_t_0.020000.vtk  mesh_t_0.030000.vtk  mesh_t_0.040000.vtk  mesh_t_0.050000.vtk  mesh_t_0.060000.vtk  mesh_t_0.070000.vtk  mesh_t_0.080000.vtk  mesh_t_0.090000.vtk  mesh_t_0.100000.vtk  mesh_t_0.110000.vtk  mesh_t_0.120000.vtk  mesh_t_0.130000.vtk  mesh_t_0.140000.vtk  mesh_t_0.150000.vtk  mesh_t_0.160000.vtk  mesh_t_0.170000.vtk  mesh_t_0.180000.vtk  mesh_t_0.190000.vtk  mesh_t_0.200000.vtk  mesh_t_0.210000.vtk  mesh_t_0.220000.vtk  mesh_t_0.230000.vtk  mesh_t_0.240000.vtk  mesh_t_0.250000.vtk  mesh_t_0.260000.vtk  mesh_t_0.270000.vtk  mesh_t_0.280000.vtk  mesh_t_0.290000.vtk  mesh_t_0.300000.vtk  mesh_t_0.310000.vtk  mesh_t_0.320000.vtk  mesh_t_0.330000.vtk  mesh_t_0.340000.vtk  mesh_t_0.350000.vtk  mesh_t_0.360000.vtk  mesh_t_0.370000.vtk  mesh_t_0.380000.vtk  mesh_t_0.390000.vtk  (+61 more)
data/2blobs/: mesh_t_0.050000.vtk  mesh_t_0.070000.vtk  mesh_t_0.120000.vtk  mesh_t_0.130000.vtk  mesh_t_0.140000.vtk  mesh_t_0.190000.vtk  mesh_t_0.200000.vtk  mesh_t_0.220000.vtk  mesh_t_0.240000.vtk  mesh_t_0.250000.vtk  mesh_t_0.280000.vtk  mesh_t_0.290000.vtk  mesh_t_0.300000.vtk  mesh_t_0.310000.vtk  mesh_t_0.340000.vtk  mesh_t_0.350000.vtk  mesh_t_0.360000.vtk  mesh_t_0.450000.vtk  mesh_t_0.490000.vtk  mesh_t_0.500000.vtk  mesh_t_0.540000.vtk  mesh_t_0.560000.vtk  mesh_t_0.570000.vtk  mesh_t_0.600000.vtk  mesh_t_0.630000.vtk  mesh_t_0.650000.vtk  mesh_t_0.660000.vtk  mesh_t_0.670000.vtk  mesh_t_0.680000.vtk  mesh_t_0.700000.vtk  mesh_t_0.730000.vtk  mesh_t_0.750000.vtk  mesh_t_0.760000.vtk  mesh_t_0.790000.vtk  mesh_t_0.800000.vtk  mesh_t_0.820000.vtk  mesh_t_0.860000.vtk  mesh_t_0.880000.vtk  mesh_t_0.890000.vtk  mesh_t_0.910000.vtk  (+4 more)
data/2blobs_old/: mesh_t_0.010000.vtk  mesh_t_0.020000.vtk  mesh_t_0.030000.vtk  mesh_t_0.040000.vtk  mesh_t_0.050000.vtk  mesh_t_0.060000.vtk  mesh_t_0.070000.vtk  mesh_t_0.080000.vtk  mesh_t_0.100000.vtk  mesh_t_0.130000.vtk  mesh_t_0.140000.vtk  mesh_t_0.150000.vtk  mesh_t_0.170000.vtk  mesh_t_0.190000.vtk  mesh_t_0.210000.vtk  mesh_t_0.220000.vtk  mesh_t_0.230000.vtk  mesh_t_0.240000.vtk  mesh_t_0.250000.vtk  mesh_t_0.280000.vtk  mesh_t_0.290000.vtk  mesh_t_0.320000.vtk  mesh_t_0.330000.vtk  mesh_t_0.340000.vtk  mesh_t_0.360000.vtk  mesh_t_0.370000.vtk  mesh_t_0.380000.vtk  mesh_t_0.390000.vtk  mesh_t_0.420000.vtk  mesh_t_0.440000.vtk  mesh_t_0.490000.vtk  mesh_t_0.500000.vtk  mesh_t_0.510000.vtk  mesh_t_0.520000.vtk  mesh_t_0.530000.vtk  mesh_t_0.560000.vtk  mesh_t_0.570000.vtk  mesh_t_0.580000.vtk  mesh_t_0.590000.vtk  mesh_t_0.600000.vtk  (+22 more)
data/double_blobs/: mesh_t_0.020000.vtk  mesh_t_0.090000.vtk  mesh_t_0.100000.vtk  mesh_t_0.110000.vtk  mesh_t_0.180000.vtk  mesh_t_0.380000.vtk  mesh_t_0.390000.vtk  mesh_t_0.430000.vtk  mesh_t_0.460000.vtk  mesh_t_0.520000.vtk  mesh_t_0.550000.vtk  mesh_t_0.580000.vtk  mesh_t_0.690000.vtk  mesh_t_0.710000.vtk  mesh_t_0.720000.vtk  mesh_t_0.740000.vtk  mesh_t_0.770000.vtk  mesh_t_0.830000.vtk  mesh_t_0.920000.vtk  mesh_t_0.930000.vtk  mesh_t_0.940000.vtk  mesh_t_0.980000.vtk
data/double_blobs_old/: mesh_t_0.090000.vtk  mesh_t_0.120000.vtk  mesh_t_0.260000.vtk  mesh_t_0.300000.vtk  mesh_t_0.410000.vtk  mesh_t_0.430000.vtk  mesh_t_0.450000.vtk  mesh_t_0.470000.vtk  mesh_t_0.480000.vtk  mesh_t_0.630000.vtk  mesh_t_0.690000.vtk  mesh_t_0.700000.vtk  mesh_t_0.730000.vtk  mesh_t_0.740000.vtk  mesh_t_0.750000.vtk  mesh_t_0.800000.vtk  mesh_t_0.830000.vtk  mesh_t_0.890000.vtk  mesh_t_0.900000.vtk  mesh_t_0.920000.vtk  mesh_t_0.940000.vtk
data/middle_rectangle/: mesh_t_0.010000.vtk  mesh_t_0.020000.vtk  mesh_t_0.050000.vtk  mesh_t_0.060000.vtk  mesh_t_0.070000.vtk  mesh_t_0.090000.vtk  mesh_t_0.100000.vtk  mesh_t_0.180000.vtk  mesh_t_0.190000.vtk  mesh_t_0.220000.vtk  mesh_t_0.230000.vtk  mesh_t_0.240000.vtk  mesh_t_0.260000.vtk  mesh_t_0.270000.vtk  mesh_t_0.310000.vtk  mesh_t_0.320000.vtk  mesh_t_0.330000.vtk  mesh_t_0.340000.vtk  mesh_t_0.350000.vtk  mesh_t_0.370000.vtk  mesh_t_0.390000.vtk  mesh_t_0.430000.vtk  mesh_t_0.440000.vtk  mesh_t_0.450000.vtk  mesh_t_0.460000.vtk  mesh_t_0.510000.vtk  mesh_t_0.600000.vtk  mesh_t_0.620000.vtk  mesh_t_0.630000.vtk  mesh_t_0.640000.vtk  mesh_t_0.650000.vtk  mesh_t_0.680000.vtk  mesh_t_0.700000.vtk  mesh_t_0.750000.vtk  mesh_t_0.760000.vtk  mesh_t_0.770000.vtk  mesh_t_0.800000.vtk  mesh_t_0.840000.vtk  mesh_t_0.850000.vtk  mesh_t_0.880000.vtk  (+6 more)
data/middle_rectangle_old/: mesh_t_0.000000.vtk  mesh_t_0.040000.vtk  mesh_t_0.070000.vtk  mesh_t_0.090000.vtk  mesh_t_0.120000.vtk  mesh_t_0.170000.vtk  mesh_t_0.180000.vtk  mesh_t_0.190000.vtk  mesh_t_0.220000.vtk  mesh_t_0.230000.vtk  mesh_t_0.250000.vtk  mesh_t_0.260000.vtk  mesh_t_0.310000.vtk  mesh_t_0.340000.vtk  mesh_t_0.360000.vtk  mesh_t_0.400000.vtk  mesh_t_0.410000.vtk  mesh_t_0.420000.vtk  mesh_t_0.450000.vtk  mesh_t_0.490000.vtk  mesh_t_0.530000.vtk  mesh_t_0.540000.vtk  mesh_t_0.550000.vtk  mesh_t_0.560000.vtk  mesh_t_0.580000.vtk  mesh_t_0.590000.vtk  mesh_t_0.600000.vtk  (+23 more)
presentation/: plot_results_benchmarking.R  presentation.tex
src/: CMakeLists.txt  common.cpp  common.h  dense.cpp  dense.h  main.cpp  sparse-csr.cpp  sparse-csr.h  sparse-eigen.cpp  sparse-eigen.h  sparse-man.cpp  sparse-man.h  test  test.cpp
(+571 files in other folders)
